--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "mongoose": "^8.5.2",
     "node-notifier": "^10.0.1"
   }
 }
