--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "engines": {
+    "node": "20.15.1"
+  },
+  "author": "Yeasa",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
